{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 17,
  "lineage": "25efea4b-311a-0c8a-62f6-c4ea906720e6",
  "resources": [
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:388779989543:security-group/sg-0bd8680cf125c14fe",
            "description": "Security group for app server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd8680cf125c14fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de311338a05eced0"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "shopbd-app-sg",
            "name_prefix": "",
            "owner_id": "388779989543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "shopbd-app-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopbd-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9b5adade43fbe38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.bastion",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:388779989543:security-group/sg-0de311338a05eced0",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de311338a05eced0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "shopbd-bastion-sg",
            "name_prefix": "",
            "owner_id": "388779989543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "shopbd-bastion-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopbd-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9b5adade43fbe38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:388779989543:security-group/sg-08fbfa45b40d0860a",
            "description": "Security group for database server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fbfa45b40d0860a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from app server only",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd8680cf125c14fe"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de311338a05eced0"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "shopbd-db-sg",
            "name_prefix": "",
            "owner_id": "388779989543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "shopbd-db-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopbd-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9b5adade43fbe38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.app",
            "module.security_groups.aws_security_group.bastion",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05072431297e55f07",
            "arn": "arn:aws:ec2:ap-southeast-1:388779989543:elastic-ip/eipalloc-05072431297e55f07",
            "domain": "vpc",
            "id": "eipalloc-05072431297e55f07",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-215-229-100.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.229.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "shopbd-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopbd-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:388779989543:internet-gateway/igw-0a5d19e0a7c701ebb",
            "id": "igw-0a5d19e0a7c701ebb",
            "owner_id": "388779989543",
            "tags": {
              "Environment": "dev",
              "Name": "shopbd-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopbd-igw"
            },
            "vpc_id": "vpc-0a9b5adade43fbe38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05072431297e55f07",
            "association_id": "eipassoc-04b7d354dab262f51",
            "connectivity_type": "public",
            "id": "nat-098638a182af07247",
            "network_interface_id": "eni-0112a6908b54c4f3f",
            "private_ip": "10.0.1.102",
            "public_ip": "13.215.229.100",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e6397dcbfabc002",
            "tags": {
              "Environment": "dev",
              "Name": "shopbd-nat-gw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopbd-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:388779989543:route-table/rtb-053eee86e9b1acaf7",
            "id": "rtb-053eee86e9b1acaf7",
            "owner_id": "388779989543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-098638a182af07247",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "shopbd-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopbd-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9b5adade43fbe38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:388779989543:route-table/rtb-0afd7e4aace0925a4",
            "id": "rtb-0afd7e4aace0925a4",
            "owner_id": "388779989543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a5d19e0a7c701ebb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "shopbd-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopbd-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9b5adade43fbe38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d08d1db42d73ca9b",
            "route_table_id": "rtb-053eee86e9b1acaf7",
            "subnet_id": "subnet-05d06541712a7e511"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb22029e1f434d34",
            "route_table_id": "rtb-0afd7e4aace0925a4",
            "subnet_id": "subnet-03e6397dcbfabc002"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:388779989543:subnet/subnet-05d06541712a7e511",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d06541712a7e511",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388779989543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "shopbd-private-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopbd-private-subnet"
            },
            "vpc_id": "vpc-0a9b5adade43fbe38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:388779989543:subnet/subnet-03e6397dcbfabc002",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e6397dcbfabc002",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "388779989543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "shopbd-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopbd-public-subnet"
            },
            "vpc_id": "vpc-0a9b5adade43fbe38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:388779989543:vpc/vpc-0a9b5adade43fbe38",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6357e6c91e0d916",
            "default_route_table_id": "rtb-0c78a04d904e97d6a",
            "default_security_group_id": "sg-048403bdc19937b83",
            "dhcp_options_id": "dopt-0df7fe10b3e2ff861",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9b5adade43fbe38",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c78a04d904e97d6a",
            "owner_id": "388779989543",
            "tags": {
              "Environment": "dev",
              "Name": "shopbd-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shopbd-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}